#
# Copyright (c) 2006      Los Alamos National Security, LLC.  All rights
#                         reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        base/base.h

libmca_installxdirs_la_SOURCES += \
        base/installxdirs_base_components.c \
        base/installxdirs_base_expand.c
